--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -20,6 +20,7 @@
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
+    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -30,7 +31,8 @@
     "react-router": "^7.0.2",
     "react-router-dom": "^7.8.1",
     "recharts": "^3.1.2",
-    "simplebar-react": "^3.3.0"
+    "simplebar-react": "^3.3.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.4",
