--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
