--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.541.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
