--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
     "@mui/system": "^7.1.0",
+    "@mui/x-data-grid": "^8.10.2",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
