--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -31,6 +31,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-mui-sidebar": "^1.6.3",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.8.1",
