--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -15,13 +15,16 @@
     "@iconify/react": "^6.0.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^7.3.2",
+    "@mui/styles": "^6.5.0",
     "@mui/system": "^7.1.0",
     "@mui/x-data-grid": "^8.10.2",
+    "@mui/x-date-pickers": "^8.11.0",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
