--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -24,6 +24,7 @@
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
