--- a/Frontend/package/package.json
+++ b/Frontend/package/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@iconify/react": "^6.0.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
@@ -22,6 +24,7 @@
     "@mui/x-date-pickers": "^8.11.0",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^3.33.0",
+    "@tailwindcss/vite": "^4.1.13",
     "apexcharts": "^4.7.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
@@ -36,11 +39,13 @@
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-mui-sidebar": "^1.6.3",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.8.1",
     "recharts": "^3.1.2",
     "simplebar-react": "^3.3.0",
+    "tailwindcss": "^4.1.13",
     "yup": "^1.7.0"
   },
   "devDependencies": {
